--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 
     <main>
       <h1>Buy Our Products!</h1>
+      <iframe src="https://frankie-beatrice.youcanbook.me/?noframe=true&skipHeaderFooter=true" id="ycbmiframefrankie-beatrice" style="width:100%;height:1000px;border:0px;background-color:transparent;" frameborder="0" allowtransparency="true"></iframe><script>window.addEventListener && window.addEventListener("message", function(event){if (event.origin === "https://frankie-beatrice.youcanbook.me"){document.getElementById("ycbmiframefrankie-beatrice").style.height = event.data + "px";}}, false);</script>
       <p>
         This demo is in test mode. That means you can check out using any of the
         <a href="https://stripe.com/docs/testing#cards">test card numbers</a>.
